--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/tough-cookie": "^4.0.5",
     "apexcharts": "3.41.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "4.17.21",
+    "fetch-cookie": "^3.0.1",
+    "jsbn": "^1.1.0",
     "next": "14.2.3",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
+    "tough-cookie": "^4.1.4",
     "react-helmet-async": "1.3.0",
     "typescript": "5.1.6"
   },
