--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.18.0",
     "@tabler/icons-react": "2.30.0",
     "@types/node": "20.4.5",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "apexcharts": "3.41.1",
@@ -27,11 +28,13 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "init": "^0.1.2",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
